--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,17 +7,14 @@ spring:
       client:
         registration:
           discord:
-            client-name: jeeleeTest
-            client-id: { client-id }
-            client-secret: { client-secret }
-            scope:
-              - identify
+            client-id: { CLIENT_ID }
+            client-secret: { CLIENT_SECRET }
+            scope: identify
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/discord
+            redirect-uri: "http://localhost:8080/login/oauth2/code/discord"
         provider:
           discord:
-            authorization-uri: https://discord.com/api/oauth2/authorize
-            token-uri: https://discord.com/api/oauth2/token
-            user-info-uri: https://discord.com/api/users/@me
+            authorization-uri: "https://discord.com/api/v10/oauth2/authorize"
+            token-uri: "https://discord.com/api/v10/oauth2/token"
+            user-info-uri: "https://discord.com/api/v10/users/@me"
             user-name-attribute: id
-
